# AutoEvoEDA

./: .gitignore  .gitmodules  DETAILS.md  README.md  pyproject.toml  todo.md
.agents/skills/autoevoeda-adapter/: SKILL.md
.agents/skills/autoevoeda-adapter/agents/: openai.yaml
autoevoeda/: __init__.py  artifacts.py  cli.py  config.py  daemon.py  gui.py  human.py  memory.py  understand.py
autoevoeda/agents/: codex.py
autoevoeda/pipeline/: cycle.py
autoevoeda/workspace/: git.py  guard.py
evoharness/: __init__.py  agent_state.py  artifacts.py  cli.py  compare.py  config.py  daemon.py  evaluator_results.py  events.py  gui.py  human.py  memory.py  phase_docs.py  promote.py  reports.py  rules.py  session.py  state.py  understand.py  worktrees.py
evoharness/agents/: codex.py  session.py
evoharness/pipeline/: cycle.py  runner.py
evoharness/workspace/: git.py  guard.py
examples/abc/: README.md  evo.yaml
examples/abc/prompts/: coder.md  planner.md  repair.md  reviewer.md
examples/abc/scripts/: compare_regression.py  reward.py  run_perf.sh  run_regression.sh
examples/ghypart/: README.md  evo.yaml  run_understand_2cycles.sh
examples/ghypart/benchmarks/: unweighted_smoke.hgr  weighted_smoke.hgr
examples/ghypart/prompts/: coder.md  planner.md  reviewer.md
examples/ghypart/scripts/: build.sh  compare_regression.py  cuda_preflight.sh  hgr_weight_summary.py  reward.py  run_perf.sh  run_regression.sh  write_correctness.py  write_perf.py
examples/multi_repo/: README.md  evo.yaml
examples/multi_repo/scripts/: cuda_preflight.sh
(+6 files in other folders)
